fix: Improve userCameo to cater for all use cases
The content of the userCameo component was flowing out of the screen on
resizing to a smaller screen in the story and block outlets of the
settings route. The width style needed a slight adjustment and also i
realized i had passed the avatar size prop as a string. I corrected this
by converting the prop in the userCameo component to avoid any error.

Author - Ahmed Quamordeen Gbolahan
gbolahanahmed1@gmail.com

--- a/client/src/components/user-cameo/user-cameo.css
+++ b/client/src/components/user-cameo/user-cameo.css
@@ -45,8 +45,6 @@
     white-space: nowrap;
 }
 .cameo-header-no-aside > header{
-    /* font-weight: 700;
-    font-size: 1.02rem; */
     width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -76,11 +74,6 @@
     border: none;
     color: #fff;
     font-weight: 700;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
 }
 .round-button:hover{
     opacity: 0.8;
@@ -99,9 +92,5 @@
     .user-cameo-container button{
         width: 6rem;
         border-radius: 1.25rem;
-    }
-    .button-based {
-        /* 100% - (width of button + 1rem space) */
-        width: calc(100% - 7rem);
     }
 }
